<resources>
    <string name="app_name">Github repositories</string>
    <string name="service_unavailable_message">Service unavailable</string>
    <string name="no_connection_message">No connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="try_again">Try again</string>
    <string name="name">Name:</string>
    <string name="full_name">Full name:</string>
    <string name="description">Description:</string>
    <string name="retry">Retry</string>
    <string name="search_hint">GitHub Repository</string>
    <string name="no_results">No results 😓</string>
    <string name="whoops">😨 Whoops %s</string>
    <string name="title">Title:</string>
    <string name="user">User:</string>
    <string name="created">Created:</string>
    <string name="updated">Updated:</string>
    <string name="login">Login:</string>
    <string name="repository">Repository:</string>
    <string name="no_issues_found">No issues found</string>
    <string name="issues">Issues: %s</string>
    <string name="load_error">Oops, can\'t load data</string>
    <string name="hint_issues">Issues:</string>
</resources>