<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/main_margin">

    <TextView
        android:id="@+id/hintTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hintUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hintTitle" />

    <TextView
        android:id="@+id/hintCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hintUser" />

    <TextView
        android:id="@+id/hintUpdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updated"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hintCreated" />

    <TextView
        android:id="@+id/title"
        style="@style/TextMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/hintUpdated"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title" />

    <TextView
        android:id="@+id/user"
        style="@style/TextMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@id/hintTitle"
        tools:text="Shriraj29" />

    <TextView
        android:id="@+id/created"
        style="@style/TextMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@id/hintUser"
        tools:text="2022-11-28T22:39:59Z" />

    <TextView
        android:id="@+id/updated"
        style="@style/TextMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/created"
        app:layout_constraintTop_toBottomOf="@id/hintCreated"
        tools:text="2023-02-25T08:43:10Zdfdsfdsfdsfdsfdsfsdfdsfdsfsdf" />

</androidx.constraintlayout.widget.ConstraintLayout>